# flinke2c

./: .gitattributes  Readme.md
CEPless/: .gitignore  config.yaml  docker-compose.yml  flink-conf.yaml  kafka_2.12-2.4.0.tgz  sync-flink-libs.sh
CEPless/flink/: .gitignore  pom.xml
CEPless/flink-test/: .project  build.gradle  build.sh  my-flink-udfs.jar.dep
CEPless/kafka-producer/: .project
CEPless/node-manager/: Dockerfile  build.sh
experiments/: .gitignore  README.md  env_backup.yml  exps.ipynb  qdisc.sh  sample.slides.html
experiments/plot_code_paper/: flink_limitations_q1_ecdf.tex  flink_limitations_q4_ecdf.tex  flink_limitations_q5_ecdf.tex  flink_placement_abs_q1_ecdf.tex  flink_placement_abs_q4_ecdf.tex  flink_placement_bu_abs_q1_ecdf.tex  flink_placement_bu_q1_ecdf.tex  flink_placement_td_abs_q1_ecdf.tex  flink_placement_td_abs_q4_ecdf.tex  flink_placement_td_q1_ecdf.tex  flink_placement_td_q4_ecdf.tex  flink_placement_td_q5_ecdf.tex  intro_q1_ecdf.tex  nes_limitations_q1_ecdf.tex  nes_limitations_q4_ecdf.tex  nes_limitations_q5_ecdf.tex
experiments/plot_data/: limitations_slow_coordinator_base_tcp_ss_ecdf.csv  limitations_slow_coordinator_slowcoord100mbps_hom_hom_q1_ecdf.csv
experiments/utils/: constants.py  exp_utils.py  gen_plot_data.py  graph_utils.py  plot_utils.py
flinke2c/: pom.xml
flinke2c/conf/: config.yaml  flink-conf.yaml  log4j-console.properties  (+2 more)
streaming-tcp-harness/: .gitignore  Cargo.toml  Readme.md
streaming-tcp-harness/tcp_source/: Cargo.toml
streaming-tcp-harness/tcp_source/src/: main.rs  shared_vec_iter.rs
(+500 files in other folders)
