[package]
name = "tcp_source"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
parquet = { version = "52.0.0", features = ["json"] }
clap = { workspace = true }
chrono = "0.4.38"
humantime = "2.1.0"
crossbeam-queue = "0.3.11"
logger = { path = "../logger" }
serde_cbor = "0.11.2"
serde_json = "1.0"
rmp = {workspace = true}
timerfd = "1.6"

[build-dependencies]
prost-build = "0.14.1"
